--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,99 @@
-﻿annotated-types==0.7.0
-anyio==4.9.0
-asyncpg==0.30.0
-certifi==2025.4.26
-click==8.1.8
+attrs==23.2.0
+Babel==2.10.3
+bcc==0.29.1
+bcrypt==3.2.2
+blinker==1.7.0
+Brlapi==0.8.5
+cachetools==5.3.0
+certifi==2023.11.17
+chardet==5.2.0
+click==8.1.6
+cloud-init==24.4.1
 colorama==0.4.6
-dnspython==2.7.0
-dotenv==0.9.9
-email_validator==2.2.0
-fastapi==0.115.12
-fastapi-cli==0.0.7
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-Jinja2==3.1.6
+command-not-found==0.3
+configobj==5.0.8
+cryptography==41.0.7
+cupshelpers==1.0
+dbus-python==1.3.2
+defer==1.0.6
+distro==1.9.0
+distro-info==1.7+build1
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+duplicity==2.1.4
+fasteners==0.18
+google-api-python-client==1.7.12
+google-auth==1.5.1
+google-auth-httplib2==0.2.0
+greenlet==3.0.3
+httplib2==0.20.4
+idna==3.6
+Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.10.3
+language-selector==0.1
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+louis==3.29.0
+Mako==1.3.2.dev0
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
+MarkupSafe==2.1.5
 mdurl==0.1.2
-pydantic==2.11.4
-pydantic_core==2.33.2
-Pygments==2.19.1
-python-dotenv==1.1.0
-python-multipart==0.0.20
-PyYAML==6.0.2
-rich==14.0.0
-rich-toolkit==0.14.6
-shellingham==1.5.4
-sniffio==1.3.1
-starlette==0.46.2
-typer==0.15.4
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-uvicorn==0.34.2
-watchfiles==1.0.5
-websockets==15.0.1
-bcrypt==4.2.1
+monotonic==1.6
+netaddr==0.8.0
+oauth2client==4.1.3
+oauthlib==3.2.2
+olefile==0.46
+packaging==24.0
+paramiko==2.12.0
+pexpect==4.9.0
+pillow==10.2.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.25.1
+pycups==2.0.1
+PyDrive2==0.0.0
+Pygments==2.17.2
+PyGObject==3.48.2
+PyJWT==2.7.0
+PyNaCl==1.5.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+pyrsistent==0.20.0
+pyserial==3.5
+python-apt==2.7.7+ubuntu4
+python-dateutil==2.8.2
+python-debian==0.1.49+ubuntu2
+python-dotenv==1.0.1
+pytz==2024.1
+pyxdg==0.28
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+rsa==4.9
+screen-resolution-extra==0.0.0
+setuptools==68.1.2
+six==1.16.0
+SQLAlchemy==1.4.50
+systemd-python==235
+texttable==1.6.7
+typing_extensions==4.10.0
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.2
+unattended-upgrades==0.1
+uritemplate==4.1.1
+urllib3==2.0.7
+usb-creator==0.3.16
+wadllib==1.3.6
+websocket-client==1.7.0
+wheel==0.42.0
+xdg==5
+xkit==0.0.0
